# Midori-AI

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Midori-AI.code-workspace  README.MD  config.toml  hugo.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: All_Build_Tests.yaml  Auto_Debug_Build.yaml  Auto_Test_Build.yaml  Auto_Test_Build_PR.yaml  Auto_Test_Upload.yaml  Build_Midori_AI_CLI.yaml  Build_Midori_AI_PixelArch_CLI.yaml  Build_Midori_AI_Standard_CLI.yaml  Full_Build_Upload.yaml  Linux_Build_SelfHosted_Test.yml  Linux_Build_Test.yml  LocalAI_ver_check.yml  Make_Deb11_Dockers.yml  Make_Subsystem_Dockers.yml  Program_Build_Upload.yaml  Push_PixelArch.yaml  Push_PixelGen.yaml  Python_Code_Check.yml  Windows_Build_Test.yml  build-manager.yaml  codeql.yml  hugo_test.yml  linux_installer_test.yml  pylint.yml  python-package-conda.yml  release.yaml
.github/workflows-off/: Program_Build_Upload.yaml  Push_PixelArch.yaml  Push_PixelGen.yaml  codeql.yml
Experimentation/SDXL_Photo_Maker/: make_photos.py  prompt_maker.py  pyproject.toml
Experimentation/text-to-video/: main.py  pyproject.toml
Other_Programs/git_clone/: Readme  main.py  pyproject.toml
Other_Programs/llm_qna/: lrm_chat.py  pyproject.toml
PackageManagers/AUR/: midori-ai.install  pkgbuild  pkgbuild-all
content/: _index.md  about-midori-ai.md  carly-api.md
content/about-us/: _index.md  about-luna.md  carly-api.md  contact-us.md
content/howtos/: _index.md  (+9 more)
other_files/: midori_program_ver.txt  model_list.txt  python_ver.py  upload_to_file_server.bat
(+75 files in other folders)
