[project]
name = "photomaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "accelerate>=1.4.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.12",
    "aiosqlite>=0.21.0",
    "climage>=0.2.2",
    "diffusers",
    "gguf>=0.14.0",
    "nltk>=3.9.1",
    "peft>=0.14.0",
    "pillow>=11.1.0",
    "pip>=25.0.1",
    "pytesseract",
    "python-weather>=2.0.7",
    "pytz>=2025.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "sentencepiece>=0.2.0",
    "setuptools>=75.8.0",
    "torch>=2.6.0",
    "transformers",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git", rev = "v0.29.2" }
transformers = { git = "https://github.com/huggingface/transformers" }
pytesseract = { git = "https://github.com/madmaze/pytesseract.git" }
